# openwanzer

./: .clang-format  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  COMPARISON.md  CONVENTIONS.md  DESIGN.md  DEV_SETUP.md  Makefile  QUICKSTART.md  QUICKSTART_UV.md  README.md  REFERENCE.md  ai.py  analyze_hex_edges  analyze_hex_edges.cpp  build.sh  config.txt  constants.py  create_placeholders.py  dev-server.py  game_state.py  hex_map.py  main.py  openwanzer.cpp  phase2b_auto_refactor.sh  pyproject.toml  test_border_logic  test_border_logic.cpp  unit.py
.claude/: settings.json
doc/arcade/: README.md  conf.py  index.rst
doc/arcade/_includes/: links.rst  resources_Image_Theme_Sets.rst  resources_Kenney.rst  resources_Liberation.rst  resources_Top-Level_Resources.rst  resources_Video.rst
doc/arcade/api_docs/gl/: buffer.rst  context.rst  framebuffer.rst  geometry.rst  index.rst  program.rst  query.rst  sampler.rst  texture.rst  texture_array.rst  types.rst  utils.rst
doc/arcade/contributing/: index.rst
doc/arcade/example_code/: index.rst  shape_list_demo.rst  sprite_move_animation.rst  sprite_move_scrolling.rst  update_thumbnails.bat
doc/arcade/get_started/: arcade_book.rst  install.rst
doc/arcade/programming_guide/: camera.rst  event_loop.rst  gles_raspi_and_sbc.rst  opengl_notes.rst  performance_tips.rst  resource_handlers.rst  sections.rst  sound.rst  texture_atlas.rst
doc/arcade/programming_guide/gui/: concepts.rst  controller_support.rst  index.rst  own_layout.rst  own_widgets.rst
doc/arcade/programming_guide/sprites/: spritelists.rst
doc/arcade/tutorials/: shader_tutorials.rst
doc/arcade/tutorials/card_game/: index.rst  solitaire_11.py
doc/arcade/tutorials/crt_filter/: crt_filter_example.py
doc/arcade/tutorials/framebuffer/: index.rst
doc/arcade/tutorials/lights/: 01_light_demo.py  light_demo.py
doc/arcade/tutorials/menu/: index.rst
doc/arcade/tutorials/platform_tutorial/: step_01.rst  step_02.rst  step_03.rst  step_04.rst  step_07.rst  step_10.rst  step_12.rst
doc/arcade/tutorials/pymunk_platformer/: index.rst  pymunk_demo_platformer.py  pymunk_demo_platformer_02.py  pymunk_demo_platformer_03.py  pymunk_demo_platformer_04.py  pymunk_demo_platformer_05.py  pymunk_demo_platformer_06.py  pymunk_demo_platformer_07.py  pymunk_demo_platformer_08.py  pymunk_demo_platformer_09.py  pymunk_demo_platformer_10.py  pymunk_demo_platformer_11.py  pymunk_demo_platformer_12.py
doc/arcade/tutorials/raycasting/: step_08.py
doc/arcade/tutorials/views/: index.rst
docs/: ARCHITECTURE.md  CONTRIBUTING.md
include/: ArmorLocation.h  ArmorLocation.hpp  CherryStyle.hpp  CombatArcs.h  CombatArcs.hpp  Config.h  Config.hpp  Constants.h  Constants.hpp  DamageSystem.h  DamageSystem.hpp  Enums.h  Enums.hpp  Equipment.hpp  FontManager.hpp  GameHex.h  GameHex.hpp  GameLogic.h  GameLogic.hpp  GameState.h  GameState.hpp  Hex.hpp  HexCoord.h  HexCoord.hpp  HitTables.h  HitTables.hpp  Input.h  Input.hpp  MechBayUI.hpp  MechLoadout.hpp  PaperdollUI.h  PaperdollUI.hpp  Polyhedron.hpp  PolyhedronRenderer.hpp  Raygui.hpp  Raylib.hpp  Raymath.hpp  Rendering.h  Rendering.hpp  Rlgl.hpp  (+8 more)
include/rl/: raygui.h  rlgl.h
js/: equipment.js  game.js  render.js  ui.js
resources/equipment/: equipment-country-25.json  equipment-country-6.json  equipment-country-7.json
resources/scenarios/data/: tutorial.xml
src/: ArmorLocation.cpp  AttackLines.cpp  Camera.cpp  CherryStyle.cpp  Combat.cpp  CombatArcs.cpp  CombatText.cpp  CombatVisuals.cpp  Constants.cpp  DamageSystem.cpp  Equipment.cpp  FontManager.cpp  GameState.cpp  HexDrawing.cpp  HitTables.cpp  Main.cpp  MechBayUI.cpp  MechLoadout.cpp  PaperdollUI.cpp  Pathfinding.cpp  Persistence.cpp  Polyhedron.cpp  PolyhedronRenderer.cpp  PolyhedronUI.cpp  StyleManager.cpp  Systems.cpp  UIDrawing.cpp  UIPanels.cpp  Unit.cpp  Utilities.cpp  main.cpp
src/config/: config.h  persistence.cpp  style_manager.cpp
src/core/: armor_location.cpp  armor_location.h  constants.cpp  constants.h  enums.h  game_hex.h  game_state.cpp  game_state.h  hex_coord.h  types.h  unit.cpp  unit.h
src/game_logic/: attack_lines.cpp  combat.cpp  combat_arcs.cpp  combat_arcs.h  damage_system.cpp  damage_system.h  game_logic.h  hit_tables.cpp  hit_tables.h  pathfinding.cpp  systems.cpp  utilities.cpp
src/input/: camera.cpp  input.h
src/rendering/: combat_visuals.cpp  hex_drawing.cpp  paperdoll_ui.cpp  paperdoll_ui.h  rendering.h  ui_drawing.cpp
src/ui/: ui_panels.cpp  ui_panels.h
