[project]
name = "panzer-general-prototype"
version = "0.2.0"
description = "Python Arcade prototype of Panzer General 2 with optimized rendering and 2-panel GUI"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "GPL-3.0"}
authors = [
    {name = "Panzer General Prototype Team"}
]
keywords = ["game", "strategy", "panzer-general", "arcade", "turn-based", "hex-grid"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "arcade",
]

[project.scripts]
panzer = "main:main"

[project.urls]
Homepage = "https://github.com/yourusername/panzer-general-prototype"
Repository = "https://github.com/yourusername/panzer-general-prototype"
Changelog = "https://github.com/yourusername/panzer-general-prototype/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
